# livemathtex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_symlinks.sh
.cursor/commands/: README.md  build-calculations.md  debug-calculations.md  livemathtex-setup.md  livemathtex.md  setup.md
.cursor/rules/: index.md  livemathtex.mdc
.planning/: .build-all-current-branch  .build-all-current-issues  .build-all-initial-issues  .debug-calculations-status.json  DEBUGGING_WORKFLOW.md  GSD_AUDIT_REPORT.md  ISSUES.md  LESSONS_LEARNED.md  PROJECT.md  ROADMAP.md  STATE.md  config.json  debug_calculations_retrospective_2026-01-15.md  launch_claude.sh  launch_monitor.sh
.planning/archive/v1.1/: BUG_INVESTIGATION.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/history/: IR_SCHEMA_V3_PROPOSAL.md  README.md
.planning/milestones/: v1.3-ROADMAP.md  v1.5-ROADMAP.md  v3.1-ROADMAP.md  v4.1-SUMMARY.md
.planning/phases/01-critical-bug-fix/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/01-fix-clear-process-cycle/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-medium-bugs/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/02-preserve-inline-unit-hints/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-api-features/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/03-fix-evaluation-unit-lookup/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-output-unit-conversion/: 04-01-SUMMARY.md  (+1 more)
docs/: ARCHITECTURE.md  BACKGROUND.md  BACKLOG.md  CORTEX_REFERENCE.md  DEPENDENCIES.md  EDITOR_INTEGRATION.md  EXAMPLES.md  IR_SCHEMA_V3_PROPOSAL.md  KNOWN_ISSUES.md  PINT_MIGRATION_ANALYSIS.md  ROADMAP.md  SETUP.md  SPEC.md  SYNTAX.md  USAGE.md  UX.md
examples/: README.md  demo.md  playground.md
examples/arrays/: input.lmt.json  input.md  output.md
examples/cross-references/: input.lmt.json  input.md  output.md
examples/custom-units/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/engineering/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/engineering-units/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/error-handling/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/functions/: input.lmt.json  input.md  output.md
examples/physics/: input.md  output.md
examples/pump-sizing/: input.lmt.json  input.md  output.md
examples/settings/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/simple/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/simple-units/: .livemathtex.toml  input.lmt.json  input.md  output.lmt.json  output.md  output.md.bak
examples/smart-formatting/: input.lmt.json  input.md  output.md
examples/unit-library/: .livemathtex.toml  input.lmt.json  input.md  output.md
examples/units/: input.md  output.md
libs/: README.md
src/livemathtex/: __init__.py  cli.py  config.py  core.py
tests/: __init__.py  conftest.py  test_arrays.lmt.json  test_arrays.md  test_calculation_parser.py  test_clear_v2.py  test_cross_references.py  test_definition_types.py  test_dimensional_analysis.py  test_error_markup.py  test_examples.py  test_expression_evaluator.py  test_expression_evaluator_arrays.py  test_expression_parser.py  test_expression_parser_arrays.py  test_expression_tokenizer.py  test_expression_tokenizer_arrays.py  test_frac_unit_expressions.lmt.json  test_frac_unit_expressions.md  test_inline_unit_hints.py  test_iss_030_inplace_update.lmt.json  test_iss_030_inplace_update.md  test_iss_031_unit_propagation_dimensionless.lmt.json  test_iss_031_unit_propagation_dimensionless.md  test_iss_032_function_evaluation.lmt.json  test_iss_032_function_evaluation.md  test_iss_033_superscript_unit_conflict.lmt.json  test_iss_033_superscript_unit_conflict.md  test_iss_034_comma_in_subscript.lmt.json  test_iss_034_comma_in_subscript.md  test_iss_035_symbol_not_iterable_in_tables.lmt.json  test_iss_035_symbol_not_iterable_in_tables.md  test_iss_036_comma_subscript_symbol_not_iterable.lmt.json  test_iss_036_comma_subscript_symbol_not_iterable.md  test_iss_036_minimal_fail.lmt.json  test_iss_036_minimal_fail.md  test_iss_037_table_cell_symbol_not_iterable.lmt.json  test_iss_037_table_cell_symbol_not_iterable.md  test_iss_038_comma_subscript_expression_parse_error.lmt.json  test_iss_038_comma_subscript_expression_parse_error.md  (+26 more)
utils/: regenerate_json_v3.py
(+118 files in other folders)
