[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livemathtex"
version = "0.1.0"
description = "LiveMathTeX - Live LaTeX calculations in Markdown documents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mark Michiels", email = "mark@example.com"}
]
keywords = ["livemathtex", "latex", "markdown", "calculations", "engineering", "live-math"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.10"
dependencies = [
    # Unit handling - Pint provides robust unit registry and conversion
    "pint>=0.24",

    # CLI
    "click>=8.1",

    # Configuration (TOML parsing for Python < 3.11)
    "tomli>=2.0; python_version < '3.11'",

    # Markdown/LaTeX parsing (Phase 8 - hybrid parser)
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "black>=24.0",
    "ruff>=0.8.0",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
livemathtex = "livemathtex.cli:main"

[project.urls]
Homepage = "https://github.com/MarkMichiels/livemathtex"
Documentation = "https://livemathtex.readthedocs.io"
Repository = "https://github.com/MarkMichiels/livemathtex"
Issues = "https://github.com/MarkMichiels/livemathtex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=livemathtex"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
